add second edit

--- a/arabic/magazine-services.html
+++ b/arabic/magazine-services.html
@@ -216,27 +216,27 @@
               <div class="modal-form">
                 <form>
                   <div class="row">
-                    <div class="col-6"> 
+                    <div class="col-md-6"> 
                       <div class="mb-3"> 
                         <input class="form-control" id="username" type="text" aria-describedby="username" placeholder="الاسم">
                       </div>
                     </div>
-                    <div class="col-6">        
+                    <div class="col-md-6">        
                       <div class="mb-3"> 
                         <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="البريد الالكتروني">
                       </div>
                     </div>
-                    <div class="col-6">        
+                    <div class="col-md-6">        
                       <div class="mb-3"> 
                         <input class="form-control" id="mobilenumer" type="text" placeholder="رقم الهاتف">
                       </div>
                     </div>
-                    <div class="col-6">        
+                    <div class="col-md-6">        
                       <div class="mb-3"> 
                         <input class="form-control" id="location" type="text" placeholder="الجهة او الاداراة ">
                       </div>
                     </div>
-                    <div class="col-12">  
+                    <div class="col-md-12">  
                       <div class="mb-3"> 
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="10" placeholder="تفاصيل المناسبة"> </textarea>
                       </div>
