--- a/articles.html
+++ b/articles.html
@@ -26,8 +26,8 @@
       <!--PreLoader-->
       <div class="loader">
         <video width="auto" height="auto" muted autoplay loop>
-          <source src="../video/loading1.webm" type="video/mp4">
-          <source src="../videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
+          <source src="video/loading1.webm" type="video/mp4">
+          <source src="videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
         </video>
       </div>
       <!--PreLoader-->
@@ -108,12 +108,14 @@
                 <ul class="navbar-nav">
                   <li class="nav-item active"><a class="nav-link" aria-current="page" href="index.html">home</a></li>
                   <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Decisisons</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Interfiews</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Sociaty </a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">NewsPaper Services            </a></li>
-                  <li class="nav-item"><a class="nav-link" href="contact.html">contact us  </a></li>
-                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="../arabic/index.html">  العربية</a>
+                  <li class="nav-item"><a class="nav-link" href="articles.html">Articles</a></li>
+                  <li class="nav-item"><a class="nav-link" href="decisions.html">Decisisons</a></li>
+                  <li class="nav-item"><a class="nav-link" href="reports.html">Reports </a></li>
+                  <li class="nav-item"><a class="nav-link" href="meetings.html">Meetings           </a></li>
+                  <li class="nav-item"><a class="nav-link" href="socaity.html">University Sociaty</a></li>
+                  <li class="nav-item"><a class="nav-link" href="magazine-services.html">Magazine Services </a></li>
+                  <li class="nav-item"><a class="nav-link" href="contactus.html">Contact Us   </a></li>
+                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="arabic/index.html">  العربية</a>
                     <ul class="social__icons"> 
                       <li><a href="#!"><i class="bi bi-twitter"></i></a></li>
                       <li><a href="#!"><i class="bi bi-facebook"> </i></a></li>
@@ -144,57 +146,57 @@
             <div class="row">
               <div class="col-md-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="article-box">
-                  <div class="article-thumbnail"><img class="img-fluid" src="../images//articles/01.png" alt="article">
+                  <div class="article-thumbnail"><img class="img-fluid" src="images/articles/01.png" alt="article">
                     <div class="author">
                       <p>Dr. Jinan Abdulaziz Al-Tamimi, Professor of Linguistics</p>
                     </div>
                   </div>
                   <div class="article-text">
-                    <h5><a href="#!">Distracted reading</a></h5>
+                    <h5><a href="single-article.html">Distracted reading</a></h5>
                     <p class="article-desc">Did you happen to open Twitter or Instagram and find the timeline on your phone screen quickly passing by successive quotes: “Beware job burnout” and then: “Be like a candle that burns to light up others,” and then another quote: “The root of happiness is altruism.” It comes immediately after it: Be selfish...</p>
-                    <div class="read-more"><a href="#!"><span>more detail</span><i class="bi bi-chevron-double-right"></i></a></div>
+                    <div class="read-more"><a href="single-article.html"><span>more detail</span><i class="bi bi-chevron-double-right"></i></a></div>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="article-box">
-                  <div class="article-thumbnail"><img class="img-fluid" src="../images//articles/02.png" alt="article">
+                  <div class="article-thumbnail"><img class="img-fluid" src="images/articles/02.png" alt="article">
                     <div class="author">
                       <p>Pharmacist: Esra Abdullah Al-Othman</p>
                     </div>
                   </div>
                   <div class="article-text">
-                    <h5><a href="#!">Our career goals for the new year</a></h5>
+                    <h5><a href="single-article.html">Our career goals for the new year</a></h5>
                     <p class="article-desc">Allocating the employee time to write his goals for the New Year gives him the opportunity to reflect and look at his ambitions and focus on achieving them on the ground to a greater extent than those who walk in his life without planning, in addition to strengthening his spirit of challenge to reach the maximum successes...</p>
-                    <div class="read-more"><a href="#!"><span>more detail</span><i class="bi bi-chevron-double-right"></i></a></div>
+                    <div class="read-more"><a href="single-article.html"><span>more detail</span><i class="bi bi-chevron-double-right"></i></a></div>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="article-box">
-                  <div class="article-thumbnail"><img class="img-fluid" src="../images//articles/03.png" alt="article">
+                  <div class="article-thumbnail"><img class="img-fluid" src="images/articles/03.png" alt="article">
                     <div class="author">
                       <p>Assistant Professor of Electrical Engineering at the College of Engineering in Wadi Al-Dawasir, Dr. Ahmed Metwally Nassef</p>
                     </div>
                   </div>
                   <div class="article-text">
-                    <h5><a href="#!">The silence of the earth speaks</a></h5>
+                    <h5><a href="single-article.html">The silence of the earth speaks</a></h5>
                     <p class="article-desc">Finally, the world woke up to the inevitability of preserving this planet (Planet Earth) in which we live and includes all of us. The planet that has long suffered and is still suffering from the threat of climate change due to human beings. There are many countries that suffer from desertification, water scarcity and fires, and others suffer from floods, hurricanes and avalanches....</p>
-                    <div class="read-more"><a href="#!"><span>more detail</span><i class="bi bi-chevron-double-right"></i></a></div>
+                    <div class="read-more"><a href="single-article.html"><span>more detail</span><i class="bi bi-chevron-double-right"></i></a></div>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="article-box">
-                  <div class="article-thumbnail"><img class="img-fluid" src="../images//articles/04.png" alt="article">
+                  <div class="article-thumbnail"><img class="img-fluid" src="images/articles/04.png" alt="article">
                     <div class="author">
                       <p>Pharmacist: Esra Abdullah Al-Othman</p>
                     </div>
                   </div>
                   <div class="article-text">
-                    <h5><a href="#!">Twitter Spaces..a knowledge and intellectual exchange</a></h5>
+                    <h5><a href="single-article.html">Twitter Spaces..a knowledge and intellectual exchange</a></h5>
                     <p class="article-desc">Keeping pace with the knowledge explosion, and benefiting from technological progress in the delivery of new knowledge to each individual due to the rapid progress in the field of science and knowledge that we live in in this era requires the individual to continue learning, it is no longer useful for one to stop learning once the years of learning in the school stages are over Just ....</p>
-                    <div class="read-more"><a href="#!"><span>more detail</span><i class="bi bi-chevron-double-right"></i></a></div>
+                    <div class="read-more"><a href="single-article.html"><span>more detail</span><i class="bi bi-chevron-double-right"></i></a></div>
                   </div>
                 </div>
               </div>
