--- a/news.html
+++ b/news.html
@@ -26,8 +26,8 @@
       <!--PreLoader-->
       <div class="loader">
         <video width="auto" height="auto" muted autoplay loop>
-          <source src="../video/loading1.webm" type="video/mp4">
-          <source src="../videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
+          <source src="video/loading1.webm" type="video/mp4">
+          <source src="videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
         </video>
       </div>
       <!--PreLoader-->
@@ -108,12 +108,14 @@
                 <ul class="navbar-nav">
                   <li class="nav-item active"><a class="nav-link" aria-current="page" href="index.html">home</a></li>
                   <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Decisisons</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Interfiews</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Sociaty </a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">NewsPaper Services            </a></li>
-                  <li class="nav-item"><a class="nav-link" href="contact.html">contact us  </a></li>
-                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="../arabic/index.html">  العربية</a>
+                  <li class="nav-item"><a class="nav-link" href="articles.html">Articles</a></li>
+                  <li class="nav-item"><a class="nav-link" href="decisions.html">Decisisons</a></li>
+                  <li class="nav-item"><a class="nav-link" href="reports.html">Reports </a></li>
+                  <li class="nav-item"><a class="nav-link" href="meetings.html">Meetings           </a></li>
+                  <li class="nav-item"><a class="nav-link" href="socaity.html">University Sociaty</a></li>
+                  <li class="nav-item"><a class="nav-link" href="magazine-services.html">Magazine Services </a></li>
+                  <li class="nav-item"><a class="nav-link" href="contactus.html">Contact Us   </a></li>
+                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="arabic/index.html">  العربية</a>
                     <ul class="social__icons"> 
                       <li><a href="#!"><i class="bi bi-twitter"></i></a></li>
                       <li><a href="#!"><i class="bi bi-facebook"> </i></a></li>
@@ -130,7 +132,7 @@
       <div class="main-breadcrumb">
         <div class="container">
           <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#!">Main Page</a></li>
+            <li class="breadcrumb-item"><a href="index.html">Main Page</a></li>
             <li class="breadcrumb-item active"><a href="#!">News </a></li>
           </ul>
         </div>
@@ -144,49 +146,49 @@
             <div class="row">
               <div class="col-md-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="news-box">
-                  <div class="news-thumbnail"><img class="img-fluid" src="../images//news/01.svg" alt="news"></div>
+                  <div class="news-thumbnail"><img class="img-fluid" src="images/news/01.svg" alt="news"></div>
                   <div class="news-title">
-                    <h5><a href="#!">The President of the University inaugurates the Academic Advising Platform (Wajehni)</a></h5>
+                    <h5><a href="single-news.html">The President of the University inaugurates the Academic Advising Platform (Wajehni)</a></h5>
                   </div>
                   <div class="news-meta">
                     <div class="time"><i class="bi bi-calendar"></i>Sunday, October 24, 2021 - 19:24</div>
-                    <div class="read-more"><a href="#!"><span>more detail</span><img class="more-icon" src="../images//icons/more-details.svg"></a></div>
+                    <div class="read-more"><a href="single-news.html"><span>more detail</span><img class="more-icon" src="images/icons/more-details.svg"></a></div>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="news-box">
-                  <div class="news-thumbnail"><img class="img-fluid" src="../images//news/02.svg" alt="news"></div>
+                  <div class="news-thumbnail"><img class="img-fluid" src="images/news/02.svg" alt="news"></div>
                   <div class="news-title">
-                    <h5><a href="#!">The library at the College of Science in Hotat Bani Tamim holds an introductory program on its services for new students</a></h5>
+                    <h5><a href="single-news.html">The library at the College of Science in Hotat Bani Tamim holds an introductory program on its services for new students</a></h5>
                   </div>
                   <div class="news-meta">
                     <div class="time"><i class="bi bi-calendar"></i>Sunday, October 24, 2021 - 19:24</div>
-                    <div class="read-more"><a href="#!"><span>more detail</span><img class="more-icon" src="../images//icons/more-details.svg"></a></div>
+                    <div class="read-more"><a href="single-news.html"><span>more detail</span><img class="more-icon" src="images/icons/more-details.svg"></a></div>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="news-box">
-                  <div class="news-thumbnail"><img class="img-fluid" src="../images//news/03.svg" alt="news"></div>
+                  <div class="news-thumbnail"><img class="img-fluid" src="images/news/03.svg" alt="news"></div>
                   <div class="news-title">
-                    <h5><a href="#!">The Dean of the College of Business Administration in Al-Houta on an inspection tour of student registration affairs for courses on the first academic day of the first semester</a></h5>
+                    <h5><a href="single-news.html">The Dean of the College of Business Administration in Al-Houta on an inspection tour of student registration affairs for courses on the first academic day of the first semester</a></h5>
                   </div>
                   <div class="news-meta">
                     <div class="time"><i class="bi bi-calendar"></i>Sunday, October 24, 2021 - 19:24</div>
-                    <div class="read-more"><a href="#!"><span>more detail</span><img class="more-icon" src="../images//icons/more-details.svg"></a></div>
+                    <div class="read-more"><a href="single-news.html"><span>more detail</span><img class="more-icon" src="images/icons/more-details.svg"></a></div>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="news-box">
-                  <div class="news-thumbnail"><img class="img-fluid" src="../images//news/04.svg" alt="news"></div>
+                  <div class="news-thumbnail"><img class="img-fluid" src="images/news/04.svg" alt="news"></div>
                   <div class="news-title">
-                    <h5><a href="#!">Prince Sattam University holds a meeting with faculty members and students about the approved study plans for the three semesters</a></h5>
+                    <h5><a href="single-news.html">Prince Sattam University holds a meeting with faculty members and students about the approved study plans for the three semesters</a></h5>
                   </div>
                   <div class="news-meta">
                     <div class="time"><i class="bi bi-calendar"></i>Sunday, October 24, 2021 - 19:24</div>
-                    <div class="read-more"><a href="#!"><span>more detail</span><img class="more-icon" src="../images//icons/more-details.svg"></a></div>
+                    <div class="read-more"><a href="single-news.html"><span>more detail</span><img class="more-icon" src="images/icons/more-details.svg"></a></div>
                   </div>
                 </div>
               </div>
