--- a/decisions.html
+++ b/decisions.html
@@ -26,8 +26,8 @@
       <!--PreLoader-->
       <div class="loader">
         <video width="auto" height="auto" muted autoplay loop>
-          <source src="../video/loading1.webm" type="video/mp4">
-          <source src="../videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
+          <source src="video/loading1.webm" type="video/mp4">
+          <source src="videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
         </video>
       </div>
       <!--PreLoader-->
@@ -108,12 +108,14 @@
                 <ul class="navbar-nav">
                   <li class="nav-item active"><a class="nav-link" aria-current="page" href="index.html">home</a></li>
                   <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Decisisons</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Interfiews</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Sociaty </a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">NewsPaper Services            </a></li>
-                  <li class="nav-item"><a class="nav-link" href="contact.html">contact us  </a></li>
-                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="../arabic/index.html">  العربية</a>
+                  <li class="nav-item"><a class="nav-link" href="articles.html">Articles</a></li>
+                  <li class="nav-item"><a class="nav-link" href="decisions.html">Decisisons</a></li>
+                  <li class="nav-item"><a class="nav-link" href="reports.html">Reports </a></li>
+                  <li class="nav-item"><a class="nav-link" href="meetings.html">Meetings           </a></li>
+                  <li class="nav-item"><a class="nav-link" href="socaity.html">University Sociaty</a></li>
+                  <li class="nav-item"><a class="nav-link" href="magazine-services.html">Magazine Services </a></li>
+                  <li class="nav-item"><a class="nav-link" href="contactus.html">Contact Us   </a></li>
+                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="arabic/index.html">  العربية</a>
                     <ul class="social__icons"> 
                       <li><a href="#!"><i class="bi bi-twitter"></i></a></li>
                       <li><a href="#!"><i class="bi bi-facebook"> </i></a></li>
@@ -130,7 +132,7 @@
       <div class="main-breadcrumb">
         <div class="container">
           <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#!">Main Page</a></li>
+            <li class="breadcrumb-item"><a href="index.html">Main Page</a></li>
             <li class="breadcrumb-item active"><a href="#!">Decisions </a></li>
           </ul>
         </div>
@@ -144,55 +146,55 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="decision-box">
-                  <div class="user-image"><img src="../images//decisions/01.png" alt="decision"></div>
+                  <div class="user-image"><img src="images/decisions/01.png" alt="decision"></div>
                   <div class="title"><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research</a></div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="decision-box">
-                  <div class="user-image"><img src="../images//decisions/03.png" alt="decision"></div>
+                  <div class="user-image"><img src="images//decisions/03.png" alt="decision"></div>
                   <div class="title"><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research</a></div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="decision-box">
-                  <div class="user-image"><img src="../images//decisions/02.png" alt="decision"></div>
+                  <div class="user-image"><img src="images//decisions/02.png" alt="decision"></div>
                   <div class="title"><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research</a></div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="decision-box">
-                  <div class="user-image"><img src="../images//decisions/04.png" alt="decision"></div>
+                  <div class="user-image"><img src="images//decisions/04.png" alt="decision"></div>
                   <div class="title"><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research</a></div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="decision-box">
-                  <div class="user-image"><img src="../images//decisions/06.png" alt="decision"></div>
+                  <div class="user-image"><img src="images//decisions/06.png" alt="decision"></div>
                   <div class="title"><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research</a></div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="decision-box">
-                  <div class="user-image"><img src="../images//decisions/05.png" alt="decision"></div>
+                  <div class="user-image"><img src="images//decisions/05.png" alt="decision"></div>
                   <div class="title"><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research</a></div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="decision-box">
-                  <div class="user-image"><img src="../images//decisions/03.png" alt="decision"></div>
+                  <div class="user-image"><img src="images//decisions/03.png" alt="decision"></div>
                   <div class="title"><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research</a></div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="decision-box">
-                  <div class="user-image"><img src="../images//decisions/04.png" alt="decision"></div>
+                  <div class="user-image"><img src="images//decisions/04.png" alt="decision"></div>
                   <div class="title"><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research</a></div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="decision-box">
-                  <div class="user-image"><img src="../images//decisions/05.png" alt="decision"></div>
+                  <div class="user-image"><img src="images//decisions/05.png" alt="decision"></div>
                   <div class="title"><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research    </a></div>
                 </div>
               </div>
@@ -221,7 +223,7 @@
               <button class="close" type="button" data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x-lg"></i></button>
             </div>
             <div class="modal-body">
-              <div class="modal-image"><img src="../images//decisions/decsion1.png" alt="decision photo"></div>
+              <div class="modal-image"><img src="images//decisions/decsion1.png" alt="decision photo"></div>
             </div>
           </div>
         </div>
