--- a/magazine-services.html
+++ b/magazine-services.html
@@ -26,8 +26,8 @@
       <!--PreLoader-->
       <div class="loader">
         <video width="auto" height="auto" muted autoplay loop>
-          <source src="../video/loading1.webm" type="video/mp4">
-          <source src="../videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
+          <source src="video/loading1.webm" type="video/mp4">
+          <source src="videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
         </video>
       </div>
       <!--PreLoader-->
@@ -108,12 +108,14 @@
                 <ul class="navbar-nav">
                   <li class="nav-item active"><a class="nav-link" aria-current="page" href="index.html">home</a></li>
                   <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Decisisons</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Interfiews</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Sociaty </a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">NewsPaper Services            </a></li>
-                  <li class="nav-item"><a class="nav-link" href="contact.html">contact us  </a></li>
-                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="../arabic/index.html">  العربية</a>
+                  <li class="nav-item"><a class="nav-link" href="articles.html">Articles</a></li>
+                  <li class="nav-item"><a class="nav-link" href="decisions.html">Decisisons</a></li>
+                  <li class="nav-item"><a class="nav-link" href="reports.html">Reports </a></li>
+                  <li class="nav-item"><a class="nav-link" href="meetings.html">Meetings           </a></li>
+                  <li class="nav-item"><a class="nav-link" href="socaity.html">University Sociaty</a></li>
+                  <li class="nav-item"><a class="nav-link" href="magazine-services.html">Magazine Services </a></li>
+                  <li class="nav-item"><a class="nav-link" href="contactus.html">Contact Us   </a></li>
+                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="arabic/index.html">  العربية</a>
                     <ul class="social__icons"> 
                       <li><a href="#!"><i class="bi bi-twitter"></i></a></li>
                       <li><a href="#!"><i class="bi bi-facebook"> </i></a></li>
@@ -130,7 +132,7 @@
       <div class="main-breadcrumb">
         <div class="container">
           <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#!">Main Page</a></li>
+            <li class="breadcrumb-item"><a href="index.html">Main Page</a></li>
             <li class="breadcrumb-item active"><a href="#!">Our Servcies </a></li>
           </ul>
         </div>
@@ -145,58 +147,58 @@
           </div>
           <div class="content magazine-services"> 
             <div class="magazine-grid">
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/1.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/1.svg" alt="services">
                 <h4><a href="#!" data-bs-toggle="modal" data-bs-target="#messageModal">Send Message  </a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/2.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/2.svg" alt="services">
                 <h4><a href="#!">Reserve Tree    </a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/3.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/3.svg" alt="services">
                 <h4><a href="#!">Photography event or event  </a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/4.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/4.svg" alt="services">
                 <h4><a href="#!">Event calendar</a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/5.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/5.svg" alt="services">
                 <h4><a href="#!">Date Converter</a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/6.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/6.svg" alt="services">
                 <h4><a href="#!">The weather today </a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/1.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/1.svg" alt="services">
                 <h4><a href="#!" data-bs-toggle="modal" data-bs-target="#messageModal">Send Message  </a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/2.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/2.svg" alt="services">
                 <h4><a href="#!">Reserve Tree    </a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/3.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/3.svg" alt="services">
                 <h4><a href="#!">Photography event or event  </a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/4.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/4.svg" alt="services">
                 <h4><a href="#!">Event calendar</a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/5.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/5.svg" alt="services">
                 <h4><a href="#!">Date Converter</a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/6.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/6.svg" alt="services">
                 <h4><a href="#!">The weather today </a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/1.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/1.svg" alt="services">
                 <h4><a href="#!" data-bs-toggle="modal" data-bs-target="#messageModal">Send Message  </a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/2.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/2.svg" alt="services">
                 <h4><a href="#!">Reserve Tree    </a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/3.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/3.svg" alt="services">
                 <h4><a href="#!">Photography event or event  </a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/4.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/4.svg" alt="services">
                 <h4><a href="#!">Event calendar</a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/5.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/5.svg" alt="services">
                 <h4><a href="#!">Date Converter</a></h4>
               </div>
-              <div class="magazine-box"><img class="img-fluid" src="../images//services/6.svg" alt="services">
+              <div class="magazine-box"><img class="img-fluid" src="images/services/6.svg" alt="services">
                 <h4><a href="#!">The weather today </a></h4>
               </div>
             </div>
@@ -207,7 +209,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header"> 
-              <div class="modal-title"><img class="img-fluid" src="../images//services/1.svg" alt="services">
+              <div class="modal-title"><img class="img-fluid" src="images/services/1.svg" alt="services">
                 <h4>Send Message  </h4>
               </div>
               <button class="close" type="button" data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x-lg"></i></button>
@@ -216,27 +218,27 @@
               <div class="modal-form">
                 <form>
                   <div class="row">
-                    <div class="col-6"> 
+                    <div class="col-md-6"> 
                       <div class="mb-3"> 
                         <input class="form-control" id="username" type="text" aria-describedby="username" placeholder="username">
                       </div>
                     </div>
-                    <div class="col-6">        
+                    <div class="col-md-6">        
                       <div class="mb-3"> 
                         <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="email">
                       </div>
                     </div>
-                    <div class="col-6">        
+                    <div class="col-md-6">        
                       <div class="mb-3"> 
                         <input class="form-control" id="mobilenumer" type="text" placeholder="phone number">
                       </div>
                     </div>
-                    <div class="col-6">        
+                    <div class="col-md-6">        
                       <div class="mb-3"> 
                         <input class="form-control" id="location" type="text" placeholder="company or location">
                       </div>
                     </div>
-                    <div class="col-12">  
+                    <div class="col-md-12">  
                       <div class="mb-3"> 
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="10" placeholder="event details"> </textarea>
                       </div>
