--- a/meetings.html
+++ b/meetings.html
@@ -26,8 +26,8 @@
       <!--PreLoader-->
       <div class="loader">
         <video width="auto" height="auto" muted autoplay loop>
-          <source src="../video/loading1.webm" type="video/mp4">
-          <source src="../videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
+          <source src="video/loading1.webm" type="video/mp4">
+          <source src="videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
         </video>
       </div>
       <!--PreLoader-->
@@ -108,12 +108,14 @@
                 <ul class="navbar-nav">
                   <li class="nav-item active"><a class="nav-link" aria-current="page" href="index.html">home</a></li>
                   <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Decisisons</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Interfiews</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Sociaty </a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">NewsPaper Services            </a></li>
-                  <li class="nav-item"><a class="nav-link" href="contact.html">contact us  </a></li>
-                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="../arabic/index.html">  العربية</a>
+                  <li class="nav-item"><a class="nav-link" href="articles.html">Articles</a></li>
+                  <li class="nav-item"><a class="nav-link" href="decisions.html">Decisisons</a></li>
+                  <li class="nav-item"><a class="nav-link" href="reports.html">Reports </a></li>
+                  <li class="nav-item"><a class="nav-link" href="meetings.html">Meetings           </a></li>
+                  <li class="nav-item"><a class="nav-link" href="socaity.html">University Sociaty</a></li>
+                  <li class="nav-item"><a class="nav-link" href="magazine-services.html">Magazine Services </a></li>
+                  <li class="nav-item"><a class="nav-link" href="contactus.html">Contact Us   </a></li>
+                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="arabic/index.html">  العربية</a>
                     <ul class="social__icons"> 
                       <li><a href="#!"><i class="bi bi-twitter"></i></a></li>
                       <li><a href="#!"><i class="bi bi-facebook"> </i></a></li>
@@ -130,7 +132,7 @@
       <div class="main-breadcrumb">
         <div class="container">
           <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#!">Main Page</a></li>
+            <li class="breadcrumb-item"><a href="index.html">Main Page</a></li>
             <li class="breadcrumb-item active"><a href="#!">meetings </a></li>
           </ul>
         </div>
@@ -144,73 +146,73 @@
             <div class="row">
               <div class="col-md-4 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="article-box report-box">
-                  <div class="article-thumbnail report-box"><img class="img-fluid" src="../images//mettings/page/01.png" alt="article">
+                  <div class="article-thumbnail report-box"><img class="img-fluid" src="images/mettings/page/01.png" alt="article">
                     <div class="author">
                       <p>date of added:  sunday 13 june 2021 9:14</p>
                     </div>
                   </div>
                   <div class="article-text report-text">
-                    <h5><a href="#!">A trip to seek knowledge .. from Guinea-Bissau to Al-Kharj</a></h5>
+                    <h5><a href="single-meeting.html">A trip to seek knowledge .. from Guinea-Bissau to Al-Kharj</a></h5>
                   </div>
                 </div>
               </div>
               <div class="col-md-4 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="article-box">
-                  <div class="article-thumbnail"><img class="img-fluid" src="../images//mettings/page/02.png" alt="article">
+                  <div class="article-thumbnail"><img class="img-fluid" src="images/mettings/page/02.png" alt="article">
                     <div class="author">
                       <p>date of added:  sunday 13 june 2021 9:14</p>
                     </div>
                   </div>
                   <div class="article-text">
-                    <h5><a href="#!">An interview for my university newspaper with the employee of the security department at the university, Jawhar bin Saad Al-Khibri</a></h5>
+                    <h5><a href="single-meeting.html">An interview for my university newspaper with the employee of the security department at the university, Jawhar bin Saad Al-Khibri</a></h5>
                   </div>
                 </div>
               </div>
               <div class="col-md-4 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="article-box">
-                  <div class="article-thumbnail"><img class="img-fluid" src="../images//mettings/page/03.png" alt="article">
+                  <div class="article-thumbnail"><img class="img-fluid" src="images/mettings/page/03.png" alt="article">
                     <div class="author">
                       <p>date of added:  sunday 13 june 2021 9:14</p>
                     </div>
                   </div>
                   <div class="article-text">
-                    <h5><a href="#!">The Vice Rector for Female Student Affairs in a press interview</a></h5>
+                    <h5><a href="single-meeting.html">The Vice Rector for Female Student Affairs in a press interview</a></h5>
                   </div>
                 </div>
               </div>
               <div class="col-md-4 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="article-box">
-                  <div class="article-thumbnail"><img class="img-fluid" src="../images//mettings/page/03.png" alt="article">
+                  <div class="article-thumbnail"><img class="img-fluid" src="images/mettings/page/03.png" alt="article">
                     <div class="author">
                       <p>date of added:  sunday 13 june 2021 9:14</p>
                     </div>
                   </div>
                   <div class="article-text">
-                    <h5><a href="#!">The Vice Rector for Female Student Affairs in a press interview</a></h5>
+                    <h5><a href="single-meeting.html">The Vice Rector for Female Student Affairs in a press interview</a></h5>
                   </div>
                 </div>
               </div>
               <div class="col-md-4 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="article-box report-box">
-                  <div class="article-thumbnail report-box"><img class="img-fluid" src="../images//mettings/page/01.png" alt="article">
+                  <div class="article-thumbnail report-box"><img class="img-fluid" src="images/mettings/page/01.png" alt="article">
                     <div class="author">
                       <p>date of added:  sunday 13 june 2021 9:14</p>
                     </div>
                   </div>
                   <div class="article-text report-text">
-                    <h5><a href="#!">A trip to seek knowledge .. from Guinea-Bissau to Al-Kharj</a></h5>
+                    <h5><a href="single-meeting.html">A trip to seek knowledge .. from Guinea-Bissau to Al-Kharj</a></h5>
                   </div>
                 </div>
               </div>
               <div class="col-md-4 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="article-box">
-                  <div class="article-thumbnail"><img class="img-fluid" src="../images//mettings/page/02.png" alt="article">
+                  <div class="article-thumbnail"><img class="img-fluid" src="images/mettings/page/02.png" alt="article">
                     <div class="author">
                       <p>date of added:  sunday 13 june 2021 9:14</p>
                     </div>
                   </div>
                   <div class="article-text">
-                    <h5><a href="#!">An interview for my university newspaper with the employee of the security department at the university, Jawhar bin Saad Al-Khibri</a></h5>
+                    <h5><a href="single-meeting.html">An interview for my university newspaper with the employee of the security department at the university, Jawhar bin Saad Al-Khibri</a></h5>
                   </div>
                 </div>
               </div>
