--- a/reports.html
+++ b/reports.html
@@ -26,8 +26,8 @@
       <!--PreLoader-->
       <div class="loader">
         <video width="auto" height="auto" muted autoplay loop>
-          <source src="../video/loading1.webm" type="video/mp4">
-          <source src="../videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
+          <source src="video/loading1.webm" type="video/mp4">
+          <source src="videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
         </video>
       </div>
       <!--PreLoader-->
@@ -108,12 +108,14 @@
                 <ul class="navbar-nav">
                   <li class="nav-item active"><a class="nav-link" aria-current="page" href="index.html">home</a></li>
                   <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Decisisons</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Interfiews</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Sociaty </a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">NewsPaper Services            </a></li>
-                  <li class="nav-item"><a class="nav-link" href="contact.html">contact us  </a></li>
-                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="../arabic/index.html">  العربية</a>
+                  <li class="nav-item"><a class="nav-link" href="articles.html">Articles</a></li>
+                  <li class="nav-item"><a class="nav-link" href="decisions.html">Decisisons</a></li>
+                  <li class="nav-item"><a class="nav-link" href="reports.html">Reports </a></li>
+                  <li class="nav-item"><a class="nav-link" href="meetings.html">Meetings           </a></li>
+                  <li class="nav-item"><a class="nav-link" href="socaity.html">University Sociaty</a></li>
+                  <li class="nav-item"><a class="nav-link" href="magazine-services.html">Magazine Services </a></li>
+                  <li class="nav-item"><a class="nav-link" href="contactus.html">Contact Us   </a></li>
+                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="arabic/index.html">  العربية</a>
                     <ul class="social__icons"> 
                       <li><a href="#!"><i class="bi bi-twitter"></i></a></li>
                       <li><a href="#!"><i class="bi bi-facebook"> </i></a></li>
@@ -130,7 +132,7 @@
       <div class="main-breadcrumb">
         <div class="container">
           <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#!">Main Page</a></li>
+            <li class="breadcrumb-item"><a href="index.html">Main Page</a></li>
             <li class="breadcrumb-item active"><a href="#!">Reports </a></li>
           </ul>
         </div>
@@ -144,49 +146,49 @@
             <div class="row">
               <div class="col-md-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="article-box report-box">
-                  <div class="article-thumbnail report-box"><img class="img-fluid" src="../images//reports/01.png" alt="article">
+                  <div class="article-thumbnail report-box"><img class="img-fluid" src="images/reports/01.png" alt="article">
                     <div class="author">
                       <p>sunday 13 june 2021 9:16</p>
                     </div>
                   </div>
                   <div class="article-text report-text">
-                    <h5><a href="#!">Prince Sattam bin Abdulaziz University concludes its participation in the International Conference and Exhibition for Education 2022 AD in Riyadh</a></h5>
+                    <h5><a href="single-report.html">Prince Sattam bin Abdulaziz University concludes its participation in the International Conference and Exhibition for Education 2022 AD in Riyadh</a></h5>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="article-box">
-                  <div class="article-thumbnail"><img class="img-fluid" src="../images//reports/02.png" alt="article">
+                  <div class="article-thumbnail"><img class="img-fluid" src="images/reports/02.png" alt="article">
                     <div class="author">
                       <p>sunday 13 june 2021 9:16</p>
                     </div>
                   </div>
                   <div class="article-text">
-                    <h5><a href="#!">Deanship of Library Affairs towards digital transformation in the main reference for services and knowledge sources of all kinds</a></h5>
+                    <h5><a href="single-report.html">Deanship of Library Affairs towards digital transformation in the main reference for services and knowledge sources of all kinds</a></h5>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="article-box">
-                  <div class="article-thumbnail"><img class="img-fluid" src="../images//reports/03.png" alt="article">
+                  <div class="article-thumbnail"><img class="img-fluid" src="images/reports/03.png" alt="article">
                     <div class="author">
                       <p>sunday 13 june 2021 9:16</p>
                     </div>
                   </div>
                   <div class="article-text">
-                    <h5><a href="#!">Expanded report: The Clinical Skills and Simulation Center at the College of Medicine is a specialized edifice and an essential link between knowledge and application</a></h5>
+                    <h5><a href="single-report.html">Expanded report: The Clinical Skills and Simulation Center at the College of Medicine is a specialized edifice and an essential link between knowledge and application</a></h5>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1.5s">
                 <div class="article-box">
-                  <div class="article-thumbnail"><img class="img-fluid" src="../images//reports/04.png" alt="article">
+                  <div class="article-thumbnail"><img class="img-fluid" src="images/reports/04.png" alt="article">
                     <div class="author">
                       <p>sunday 13 june 2021 9:16</p>
                     </div>
                   </div>
                   <div class="article-text">
-                    <h5><a href="#!">Expanded report: The labs of the College of Engineering and Computer Science are an advanced educational edifice and integrated technical care</a></h5>
+                    <h5><a href="single-report.html">Expanded report: The labs of the College of Engineering and Computer Science are an advanced educational edifice and integrated technical care</a></h5>
                   </div>
                 </div>
               </div>
