--- a/single-report.html
+++ b/single-report.html
@@ -26,8 +26,8 @@
       <!--PreLoader-->
       <div class="loader">
         <video width="auto" height="auto" muted autoplay loop>
-          <source src="../video/loading1.webm" type="video/mp4">
-          <source src="../videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
+          <source src="video/loading1.webm" type="video/mp4">
+          <source src="videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
         </video>
       </div>
       <!--PreLoader-->
@@ -108,12 +108,14 @@
                 <ul class="navbar-nav">
                   <li class="nav-item active"><a class="nav-link" aria-current="page" href="index.html">home</a></li>
                   <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Decisisons</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Interfiews</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Sociaty </a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">NewsPaper Services            </a></li>
-                  <li class="nav-item"><a class="nav-link" href="contact.html">contact us  </a></li>
-                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="../arabic/index.html">  العربية</a>
+                  <li class="nav-item"><a class="nav-link" href="articles.html">Articles</a></li>
+                  <li class="nav-item"><a class="nav-link" href="decisions.html">Decisisons</a></li>
+                  <li class="nav-item"><a class="nav-link" href="reports.html">Reports </a></li>
+                  <li class="nav-item"><a class="nav-link" href="meetings.html">Meetings           </a></li>
+                  <li class="nav-item"><a class="nav-link" href="socaity.html">University Sociaty</a></li>
+                  <li class="nav-item"><a class="nav-link" href="magazine-services.html">Magazine Services </a></li>
+                  <li class="nav-item"><a class="nav-link" href="contactus.html">Contact Us   </a></li>
+                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="arabic/index.html">  العربية</a>
                     <ul class="social__icons"> 
                       <li><a href="#!"><i class="bi bi-twitter"></i></a></li>
                       <li><a href="#!"><i class="bi bi-facebook"> </i></a></li>
@@ -130,7 +132,7 @@
       <div class="main-breadcrumb">
         <div class="container">
           <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#!">Main Page</a></li>
+            <li class="breadcrumb-item"><a href="index.html">Main Page</a></li>
             <li class="breadcrumb-item active"><a href="#!">Reports </a></li>
           </ul>
         </div>
@@ -138,7 +140,7 @@
       <div class="single-news">
         <div class="container">
           <div class="news-detail">
-            <div class="news-thumbnail">   <img class="img-fluid" src="../images//reports/single-report1.svg" alt="news"></div>
+            <div class="news-thumbnail">   <img class="img-fluid" src="images//reports/single-report1.svg" alt="news"></div>
             <div class="news-text">
               <h4 class="title">The President of the University inaugurates the Digital Academic Advising Platform (Wajehni)</h4>
               <article>
@@ -149,11 +151,11 @@
             </div>
           </div>
           <div class="single-news-carousel owl-carousel owl-theme">
-            <div class="single-news-item single-report-item"><img src="../images//reports/slider1.png" alt="report-1"></div>
-            <div class="single-report-item single-news-item"><img src="../images//reports/slider2.png" alt="report-1"></div>
-            <div class="single-report-item single-news-item"><img src="../images//reports/slider3.png" alt="report-1"></div>
-            <div class="single-report-item single-news-item"><img src="../images//reports/slider2.png" alt="report-1"></div>
-            <div class="single-report-item single-news-item"><img src="../images//reports/slider1.png" alt="report-1"></div>
+            <div class="single-news-item single-report-item"><img src="images/reports/slider1.png" alt="report-1"></div>
+            <div class="single-report-item single-news-item"><img src="images/reports/slider2.png" alt="report-1"></div>
+            <div class="single-report-item single-news-item"><img src="images/reports/slider3.png" alt="report-1"></div>
+            <div class="single-report-item single-news-item"><img src="images/reports/slider2.png" alt="report-1"></div>
+            <div class="single-report-item single-news-item"><img src="images/reports/slider1.png" alt="report-1"></div>
           </div>
         </div>
         <div class="share">
@@ -173,7 +175,7 @@
                   </div>
                 </div>
                 <div class="share-options">
-                  <p>share <img src="../images//icons/shareen.svg"></p>
+                  <p>share <img src="images/icons/shareen.svg"></p>
                   <ul class="socail-media">
                     <li> <a href="#!"><i class="bi bi-whatsapp"> </i></a></li>
                     <li> <a href="#!"><i class="bi bi-linkedin">                                                                                                                             </i></a></li>
