--- a/socaity.html
+++ b/socaity.html
@@ -26,8 +26,8 @@
       <!--PreLoader-->
       <div class="loader">
         <video width="auto" height="auto" muted autoplay loop>
-          <source src="../video/loading1.webm" type="video/mp4">
-          <source src="../videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
+          <source src="video/loading1.webm" type="video/mp4">
+          <source src="videos/video.ogg" type="video/ogg">Your browser does not support the video tag.
         </video>
       </div>
       <!--PreLoader-->
@@ -108,12 +108,14 @@
                 <ul class="navbar-nav">
                   <li class="nav-item active"><a class="nav-link" aria-current="page" href="index.html">home</a></li>
                   <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Decisisons</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Interfiews</a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">Sociaty </a></li>
-                  <li class="nav-item"><a class="nav-link" href="services.html">NewsPaper Services            </a></li>
-                  <li class="nav-item"><a class="nav-link" href="contact.html">contact us  </a></li>
-                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="../arabic/index.html">  العربية</a>
+                  <li class="nav-item"><a class="nav-link" href="articles.html">Articles</a></li>
+                  <li class="nav-item"><a class="nav-link" href="decisions.html">Decisisons</a></li>
+                  <li class="nav-item"><a class="nav-link" href="reports.html">Reports </a></li>
+                  <li class="nav-item"><a class="nav-link" href="meetings.html">Meetings           </a></li>
+                  <li class="nav-item"><a class="nav-link" href="socaity.html">University Sociaty</a></li>
+                  <li class="nav-item"><a class="nav-link" href="magazine-services.html">Magazine Services </a></li>
+                  <li class="nav-item"><a class="nav-link" href="contactus.html">Contact Us   </a></li>
+                  <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="arabic/index.html">  العربية</a>
                     <ul class="social__icons"> 
                       <li><a href="#!"><i class="bi bi-twitter"></i></a></li>
                       <li><a href="#!"><i class="bi bi-facebook"> </i></a></li>
@@ -130,7 +132,7 @@
       <div class="main-breadcrumb">
         <div class="container">
           <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#!">Main Page</a></li>
+            <li class="breadcrumb-item"><a href="index.html">Main Page</a></li>
             <li class="breadcrumb-item active"><a href="#!">Univeristy Socaity</a></li>
           </ul>
         </div>
@@ -144,37 +146,37 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="socaity-box">
-                  <div class="image"><img class="img-fluid" src="../images//socaity/1.svg" alt="socaity"></div>
+                  <div class="image"><img class="img-fluid" src="images/socaity/1.svg" alt="socaity"></div>
                   <div class="text"><a href="#!" data-bs-toggle="modal" data-bs-target="#socaityModal">The university congratulates the wedding of Mr. Walid Al-Sulaiten, a blessed marriage, as long as happiness in your world</a></div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="socaity-box">
-                  <div class="image"><img class="img-fluid" src="../images//socaity/1.svg" alt="socaity"></div>
+                  <div class="image"><img class="img-fluid" src="images/socaity/2.png" alt="socaity"></div>
                   <div class="text"><a href="#!" data-bs-toggle="modal" data-bs-target="#socaityModal">The university congratulates the wedding of Mr. Walid Al-Sulaiten, a blessed marriage, as long as happiness in your world</a></div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="socaity-box">
-                  <div class="image"><img class="img-fluid" src="../images//socaity/1.svg" alt="socaity"></div>
+                  <div class="image"><img class="img-fluid" src="images/socaity/3.png" alt="socaity"></div>
                   <div class="text"><a href="#!" data-bs-toggle="modal" data-bs-target="#socaityModal">The university congratulates the wedding of Mr. Walid Al-Sulaiten, a blessed marriage, as long as happiness in your world</a></div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="socaity-box">
-                  <div class="image"><img class="img-fluid" src="../images//socaity/1.svg" alt="socaity"></div>
+                  <div class="image"><img class="img-fluid" src="images/socaity/4.png" alt="socaity"></div>
                   <div class="text"><a href="#!" data-bs-toggle="modal" data-bs-target="#socaityModal">The university congratulates the wedding of Mr. Walid Al-Sulaiten, a blessed marriage, as long as happiness in your world    </a></div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="socaity-box">
-                  <div class="image"><img class="img-fluid" src="../images//socaity/1.svg" alt="socaity"></div>
+                  <div class="image"><img class="img-fluid" src="images/socaity/5.png" alt="socaity"></div>
                   <div class="text"><a href="#!" data-bs-toggle="modal" data-bs-target="#socaityModal">The university congratulates the wedding of Mr. Walid Al-Sulaiten, a blessed marriage, as long as happiness in your world  </a></div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="socaity-box">
-                  <div class="image"><img class="img-fluid" src="../images//socaity/1.svg" alt="socaity"></div>
+                  <div class="image"><img class="img-fluid" src="images/socaity/6.png" alt="socaity"></div>
                   <div class="text"><a href="#!" data-bs-toggle="modal" data-bs-target="#socaityModal">The university congratulates the wedding of Mr. Walid Al-Sulaiten, a blessed marriage, as long as happiness in your world                                   </a></div>
                 </div>
               </div>
@@ -189,7 +191,7 @@
               <button class="close" type="button" data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x-lg"></i></button>
             </div>
             <div class="modal-body">
-              <div class="modal-image"><img src="../images//socaity/socaity.png" alt="decision photo"></div>
+              <div class="modal-image"><img src="images/socaity/socaity.png" alt="decision photo"></div>
               <div class="modal-text">
                 <h4>Makind in Da'asala, Tamad Karabem, exceeded Netelsla's Delo / Fafzl Ajala Krab</h4>
                 <p>In eiusmod sit aute excepteur laboris sunt deserunt consectetur laboris. Esse id laborum fugiat nulla cillum et quis aute ad ad excepteur pariatur reprehenderit. Proident incididunt qui nostrud dolor. Enim consectetur nisi aute nisi consequat veniam nulla ut nostrud non amet voluptate. Qui sit ipsum deserunt qui amet sit anim. Deserunt adipisicing commodo exercitation ipsum dolor sint veniam. Non veniam culpa ipsum pariatur consectetur aute est reprehenderit esse qui minim voluptate amet.                          </p>
